Este Projeto é sobre a Banda Megadefh

--- a/3-CSS/index.html
+++ b/3-CSS/index.html
@@ -33,6 +33,12 @@
       <p>mais um</p>
       <p>e mais outro</p> -->
 
+       <!-- 46 sticky -->
+
+    <div class="sticky">
+      <span>Eu sou um Sticky</span>
+    </div>
+    
     <!--4 EXTERNAL CSS-->
     <h3>Meu titulo verde</h3>
 
@@ -280,6 +286,21 @@
       <div class="absolute-2"></div>
     </div>
 
+    <!-- 45 fixed position -->
+
+    <div class="fixed">
+      <span>Estou fixo </span>
+    </div>
+
+    <!-- 47 z-index -->
+      <div class="relative-container">
+        <div class="absolute-3"></div>
+        <div class="absolute-4"></div>
+        <div class="absolute-5"></div>
+      </div>
+
+
+   
 
   </body>
 </html>
